# basealt_compare_branches

./: .gitignore  CMakeLists.txt  branch_operations.cpp  branch_operations.hpp  compare_branches.spec  main.cpp  readme.md
src/: branch_operations.cpp  branch_operations.hpp
